--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <section class="page-header">
       <h1 class="project-name">Introduction to Julia for Statistical Genetics</h1>
       <h2 class="project-tagline">Hao Cheng, Rohan Fernando</h2>
+      <a href="http://nbviewer.ipython.org/github/reworkhow/JuliaQuant/blob/master/Index.ipynb" class="btn">Preview</a>
       <a href="https://github.com/reworkhow/JuliaQuant" class="btn">View on GitHub</a>
       <a href="https://github.com/reworkhow/JuliaQuant/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/reworkhow/JuliaQuant/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
