--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h2 class="project-tagline">Hao Cheng, Rohan Fernando</h2>
       <a href="http://nbviewer.ipython.org/github/reworkhow/JuliaQuant/blob/master/Index.ipynb" class="btn">Preview</a>
       <a href="https://github.com/reworkhow/JuliaQuant" class="btn">View on GitHub</a>
-      <a href="https://github.com/reworkhow/JuliaQuant/zipball/master" class="btn">Download .zip</a>
+      <a href="https://github.com/reworkhow/JuliaQuant/zipball/master" class="btn">Download</a>
     </section>
 
     <section class="main-content">
