--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
 <img src="QTL.jpg" align="right">
 </div>
 
-<p>The note is entirely written inside <a href="http://ipython.org/notebook.html" target="_blank">Jupeter notebooks</a>. <br></p>
+<p>This interactive book is written entirely using <a href="http://ipython.org/notebook.html" target="_blank">Jupyter notebook</a>. <br></p>
 
 <blockquote>
 <p>Why <a href="http://www.nature.com/news/interactive-notebooks-sharing-the-code-1.16261">Jupyter notebook</a>?</p>
 </blockquote>
 
-<p><a href="https://www.juliabox.org">Juliabox</a> can be used to easily check this notebook.</p>
+<p><a href="https://www.juliabox.org">Juliabox</a> can be used to interact with this book.</p>
 
 <h3>
 <a id="authors" class="anchor" href="#authors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors</h3>
@@ -71,6 +71,7 @@
 <a href="section_1/rwfiles.ipynb">1.5</a>   Read and write files (Done)</li>
 <li>
 <a href="basic/LD.ipynb">1.4</a>   regular expression</li>
+<br><br>
 </ul>
 </li>
 <li>
