--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
 <li>
 <a href="section_0/introduction.ipynb">0.1</a>   Why Julia</li>
 <li>
-<a href="section_0/installation.ipynb">0.2</a>   Installation (Done)</li>
-</ul>
+<a href="section_0/installation.ipynb">0.2</a>   Installation (Done)
 <br><br>
+</li>
+</ul>
 </li>
 
 <li>
@@ -72,10 +73,11 @@
 <li>
 <a href="section_1/rwfiles.ipynb">1.5</a>   Read and write files (Done)</li>
 <li>
-<a href="basic/LD.ipynb">1.4</a>   regular expression</li>
+<a href="basic/LD.ipynb">1.4</a>   regular expression
+<br><br>
+</li>
 </ul>
 </li>
-<br><br>
 
 <li>
 <p>Section 2:
