--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 <li>
 <a href="section_0/introduction.ipynb">0.1</a>   Why Julia</li>
 <li>
-<a href="section_0/installation.ipynb">0.2</a>   Installation (Done)
+<a href="http://nbviewer.ipython.org/github/reworkhow/JuliaGenBook/blob/master/section_0_introduction/installation.ipynb">0.2</a>   Installation (Done)
+<li>
+<a href="http://nbviewer.ipython.org/github/reworkhow/JuliaGenBook/blob/master/section_0_introduction/run.ipynb">0.3</a>   Installation (Done)
 <br><br>
 </li>
 </ul>
