--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
 
 <ul>
 <li>
-<a href="section_0/introduction.ipynb">0.1</a>   Why Julia</li>
+<a href="http://nbviewer.ipython.org/github/reworkhow/JuliaGenBook/blob/master/section_0_introduction/whyJulia.ipynb">0.1</a>   Why Julia</li>
 <li>
-<a href="section_0/installation.ipynb">0.2</a>   Installation (Done)</li>
+<a href="http://nbviewer.ipython.org/github/reworkhow/JuliaGenBook/blob/master/section_0_introduction/installation.ipynb">0.2</a>   Installation</li>
+<li>
+<a href="http://nbviewer.ipython.org/github/reworkhow/JuliaGenBook/blob/master/section_0_introduction/run.ipynb">0.1</a>   Run code</li>
 </ul>
 </li>
 
@@ -63,17 +65,8 @@
 
 <ul>
 <li>
-<a href="section_1/MapFunction.ipynb">1.1</a>   basic types learnxiny and random number(distributions)? string(my_example)</li>
-<li>
-<a href="section_1/MapFunction.ipynb">1.2</a>   loops/control flow?</li>
-<li>
-<a href="section_1/RecProb.ipynb">1.3</a>   function</li>
-<li>
-<a href="section_1/LD.ipynb">1.4</a>   map (data structure)(learn it with example (factor incidence matrix)  )</li>
-<li>
-<a href="section_1/rwfiles.ipynb">1.5</a>   Read and write files (Done)</li>
-<li>
-<a href="basic/LD.ipynb">1.4</a>   regular expression</li>
+<a href="http://nbviewer.ipython.org/github/reworkhow/JuliaGenBook/blob/master/section_1_basics/rwfiles.ipynb">1.5</a>   Read and write files</li>
+
 </ul>
 </li>
 
@@ -83,29 +76,43 @@
 
 <ul>
 <li>
-<a href="matrix/matrix.ipynb">2.1</a>   Matrix (Done)</li>
+<a href="http://nbviewer.ipython.org/github/reworkhow/JuliaGenBook/blob/master/section_2_matrix/matrix.ipynb">2.1</a>   Matrix </li>
 <li>
-<a href="matrix/matrixAlgebra.ipynb">2.2</a>   Matrix Algebra (Done)
+<a href="http://nbviewer.ipython.org/github/reworkhow/JuliaGenBook/blob/master/section_2_matrix/matrixAlgebra.ipynb">2.2</a>   Matrix Algebra 
 <br><br>
 </li>
 </ul>
 </li>
+
+
 <li>
 <p>Section 3:
+  <strong>Plotting</strong></p>
+
+<ul>
+<li>
+<a href="http://nbviewer.ipython.org/github/reworkhow/JuliaGenBook/blob/master/section_3_plotting/plotting.ipynb">3.1</a>   Plotting with Gadfly </li>
+<li>
+<a href="http://nbviewer.ipython.org/github/reworkhow/JuliaGenBook/blob/master/section_3_plotting/interactive.ipynb">3.2</a>   Interactive Plotting 
+<br><br>
+</li>
+</ul>
+</li>
+
+<li>
+<p>Section 4:
   <strong>Advanced</strong></p>
 
 <ul>
 <li>
-<a href="Bayes/BayesTheorem.ipynb">2.1</a>   Pointer<br>
+<a href="Bayes/BayesTheorem.ipynb">4.1</a>   Pointer<br>
 </li>
 <li>
-<a href="Bayes/BayesTheorem.ipynb">2.1</a>   Type(GenSim)</li>
+<a href="Bayes/BayesTheorem.ipynb">4.2</a>   Type</li>
 <li>
-<a href="Bayes/BayesInference.ipynb">2.2</a>   Module</li>
+<a href="Bayes/BayesInference.ipynb">4.3</a>   Module</li>
 <li>
-<a href="Bayes/BayesInference.ipynb">2.2</a>   Tricky things(Traps) in Julia</li>
-<li>
-<a href="Bayes/BayesInference.ipynb">2.2</a>   Example things(Traps) in Julia
+<a href="Bayes/BayesInference.ipynb">4.4</a>   Closure
 <br><br>
 </li>
 </ul>
@@ -116,11 +123,9 @@
 
 <ul>
 <li>
-<a href="Bayes/BayesTheorem.ipynb">2.1</a>   A inverse</li>
+<a href="Bayes/BayesTheorem.ipynb">2.1</a>   JWAS package</li>
 <li>
-<a href="create%20a%20package">2.3</a>   Create your own pakckage</li>
-<li>
-<a href="Bayes/BayesInference.ipynb">2.2</a>   Gensel package
+<a href="Bayes/BayesInference.ipynb">2.2</a>   XSim package
 <br><br>
 </li>
 </ul>
