--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
 <li>
 <a href="http://nbviewer.ipython.org/github/reworkhow/JuliaGenBook/blob/master/section_0_introduction/installation.ipynb">0.2</a>   Installation</li>
 <li>
-<a href="http://nbviewer.ipython.org/github/reworkhow/JuliaGenBook/blob/master/section_0_introduction/run.ipynb">0.1</a>   Run code</li>
+<a href="http://nbviewer.ipython.org/github/reworkhow/JuliaGenBook/blob/master/section_0_introduction/run.ipynb">0.3</a>   Run code
+<br><br>
+</li>
 </ul>
 </li>
 
@@ -65,7 +67,9 @@
 
 <ul>
 <li>
-<a href="http://nbviewer.ipython.org/github/reworkhow/JuliaGenBook/blob/master/section_1_basics/rwfiles.ipynb">1.5</a>   Read and write files</li>
+<a href="http://nbviewer.ipython.org/github/reworkhow/JuliaGenBook/blob/master/section_1_basics/rwfiles.ipynb">1.5</a>   Read and write files
+<br><br>
+</li>
 
 </ul>
 </li>
@@ -118,14 +122,14 @@
 </ul>
 </li>
 <li>
-<p>Section 4:
+<p>Section 5:
   <strong>Examples</strong></p>
 
 <ul>
 <li>
-<a href="Bayes/BayesTheorem.ipynb">2.1</a>   JWAS package</li>
+<a href="Bayes/BayesTheorem.ipynb">5.1</a>   JWAS package</li>
 <li>
-<a href="Bayes/BayesInference.ipynb">2.2</a>   XSim package
+<a href="Bayes/BayesInference.ipynb">5.2</a>   XSim package
 <br><br>
 </li>
 </ul>
