--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
 
 <ul>
 <li>
-<a href="Bayes/BayesTheorem.ipynb">4.1</a>   Pointer<br>
+<a href="Bayes/BayesTheorem.ipynb">4.1</a>   Pointer (TODO)<br>
 </li>
 <li>
-<a href="Bayes/BayesTheorem.ipynb">4.2</a>   Type</li>
+<a href="Bayes/BayesTheorem.ipynb">4.2</a>   Type (TODO)</li>
 <li>
-<a href="Bayes/BayesInference.ipynb">4.3</a>   Module</li>
+<a href="Bayes/BayesInference.ipynb">4.3</a>   Module (TODO)</li>
 <li>
-<a href="Bayes/BayesInference.ipynb">4.4</a>   Closure
+<a href="Bayes/BayesInference.ipynb">4.4</a>   Closure (TODO)
 <br><br>
 </li>
 </ul>
