--- a/index.html
+++ b/index.html
@@ -134,6 +134,16 @@
 </li>
 </ul>
 </li>
+
+<li>
+<p>Section 6:
+  <strong>Appendix</strong></p>
+
+<ul>
+<li>
+<a href="Bayes/BayesTheorem.ipynb">5.1</a>   Useful commands</li>
+</ul>
+</li>
 </ul>
 
       <footer class="site-footer">
