--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 <ul>
 <li>
-<a href="Bayes/BayesTheorem.ipynb">5.1</a>   Useful commands</li>
+<a href="http://nbviewer.ipython.org/github/reworkhow/JuliaGenBook/blob/master/section_5_appendix/commands.ipynb">6.1</a>   Useful commands</li>
 </ul>
 </li>
 </ul>
